<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LytContenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bienvenida"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60sp"
        android:textColor="#010101" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:id="@+id/textView2"
        android:layout_gravity="left"
        android:layout_marginTop="60sp"
        android:layout_marginLeft="25sp"
        android:allowUndo="false"
        android:autoText="false"
        android:textSize="25sp"
        android:textColor="#010101" />

    <EditText
        android:layout_width="306sp"
        android:layout_height="wrap_content"
        android:id="@+id/Usuario"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginTop="5sp"
        android:maxLines="1"
        android:minLines="1"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contraseña"
        android:id="@+id/textView3"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="10sp"
        android:textColor="#010101"
        android:textSize="25sp"
        android:linksClickable="false" />

    <EditText
        android:layout_width="306sp"
        android:layout_height="wrap_content"
        android:id="@+id/Contraseña"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginTop="5sp"
        android:maxLines="1"
        android:minLines="1"
        android:password="true"
        android:singleLine="true"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25sp"
        android:weightSum="1">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:id="@+id/BtnRegistrar"
            android:layout_gravity="left"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="-40sp"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:background="#010101"
            android:layout_weight="0.21" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:id="@+id/BtnAceptar"
            android:layout_gravity="right"
            android:background="#010101"
            android:textColor="#ffffff"
            android:layout_marginLeft="100sp"
            android:layout_weight="0.15" />

    </TableRow>

</LinearLayout>